src/objects/Radicacion_de_credito__c.object
<CustomObject>
    <fields>
        <fullName>ARP__c</fullName>
        <label>ARP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARP_codeudor1__c</fullName>
        <label>ARP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARP_codeudor2__c</fullName>
        <label>ARP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARP_codeudor3__c</fullName>
        <label>ARP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acierta_cliente_deudor__c</fullName>
        <label>Acierta cliente deudor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acierta_codeudor1__c</fullName>
        <label>Acierta_codeudor1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acierta_codeudor2__c</fullName>
        <label>Acierta codeudor2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acierta_codeudor3__c</fullName>
        <label>Acierta codeudor3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ahorro_programado__c</fullName>
        <label>Ahorro programado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Almacenes_de_cadena__c</fullName>
        <label>Almacenes de cadena</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Almacenes_de_cadena_codeudor1__c</fullName>
        <label>Almacenes de cadena</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Almacenes_de_cadena_codeudor2__c</fullName>
        <label>Almacenes de cadena</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Almacenes_de_cadena_codeudor3__c</fullName>
        <label>Almacenes de cadena</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Analista__c</fullName>
        <label>Analista</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nazly Trujillo</fullName>
                </value>
                <value>
                    <fullName>Leidy Sierra</fullName>
                </value>
                <value>
                    <fullName>Andrea Riveros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anos_de_experiencia__c</fullName>
        <label>Años de experiencia</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anos_de_experiencia_codeudor2__c</fullName>
        <label>Años de experiencia</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anos_de_experiencia_codeudor3__c</fullName>
        <label>Años de experiencia</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anos_que_lleva_cotizados_en_pensiones__c</fullName>
        <label>Años que lleva cotizados en pensiones?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Antiguedad_en_la_vivienda_actual_en_ano__c</fullName>
        <label>Antigüedad en la vivienda actual en año</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Antiguedad_en_meses__c</fullName>
        <label>Antigüedad en meses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aporta_ingresos_codeudor_1__c</fullName>
        <formula>TEXT(Codeudor_1__r.Aporta_ingresos__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aporta ingresos 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aporta_ingresos_codeudor_2__c</fullName>
        <formula>TEXT(Codeudor_2__r.Aporta_ingresos__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aporta ingresos 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aporta_ingresos_codeudor_3__c</fullName>
        <formula>TEXT( Codeudor_3__r.Aporta_ingresos__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aporta ingresos 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apto_Casa__c</fullName>
        <label>Apto/Casa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arriendo_codeudor2__c</fullName>
        <label>Arriendo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arriendo_codeudor3__c</fullName>
        <label>Arriendo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arriendo_egresos__c</fullName>
        <label>Arriendo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arriendo_egresos_codeudor1__c</fullName>
        <label>Arriendo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arriendos__c</fullName>
        <label>Arriendos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arriendos_codeudor1__c</fullName>
        <label>Arriendos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arriendos_codeudor2__c</fullName>
        <label>Arriendos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arriendos_codeudor3__c</fullName>
        <label>Arriendos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Barrio__c</fullName>
        <label>Barrio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bloque__c</fullName>
        <label>Bloque</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caja_compensacion__c</fullName>
        <label>Caja compensación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cajas_de_compensacion__c</fullName>
        <label>Cajas de compensación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cajas_de_compensacion_codeudor1__c</fullName>
        <label>Cajas de compensación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cajas_de_compensacion_codeudor2__c</fullName>
        <label>Cajas de compensación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cajas_de_compensacion_codeudor3__c</fullName>
        <label>Cajas de compensación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cargo_actual__c</fullName>
        <label>Cargo actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_codeduor2__c</fullName>
        <label>Cargo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_codeudor1__c</fullName>
        <label>Cargo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_codeudor3__c</fullName>
        <label>Cargo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_deudor__c</fullName>
        <label>Cargo deudor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Celular__c</fullName>
        <label>Celular</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Celular_codeduor2__c</fullName>
        <label>Celular</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Celular_codeudor1__c</fullName>
        <label>Celular</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Celular_codeudor3__c</fullName>
        <label>Celular</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cesantias__c</fullName>
        <label>Cesantías</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ciudad_Laboral_Actividad_Economica__c</fullName>
        <label>Ciudad</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <label>Ciudad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bogotá</fullName>
                </value>
                <value>
                    <fullName>Medellín</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Bucaramanga</fullName>
                </value>
                <value>
                    <fullName>Cali</fullName>
                </value>
                <value>
                    <fullName>Pereira</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ciudad_activo2__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_activo__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_codeudor1__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_codeudor2__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_codeudor3__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_comercial__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_comercial_codeudor1__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_comercial_codeudor2__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_comercial_codeudor3__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_de_residencia__c</fullName>
        <label>Ciudad de residencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_familiar_codeudor1__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_familiar_codeudor2__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_familiar_codeudor3__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_inmueble__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_laboral__c</fullName>
        <label>Ciudad laboral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_parentesco_familiar__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_parentesco_personal__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_personal_codeudor1__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_personal_codeudor2__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_personal_codeudor3__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_transacciones1__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_transacciones2__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_transacciones3__c</fullName>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <label>Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Nuevo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_deudor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente deudor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Radicaciones de créditos</relationshipLabel>
        <relationshipName>Radicaciones_de_creditos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Radicaciones de créditos (Codeudor 1)</relationshipLabel>
        <relationshipName>Radicaciones_de_cr_ditos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Radicaciones de créditos (Codeudor 2)</relationshipLabel>
        <relationshipName>Radicaciones_de_creditos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Radicaciones de créditos (Codeudor 3)</relationshipLabel>
        <relationshipName>Radicaciones_de_creditos3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codigo_CIIU__c</fullName>
        <label>Código CIIU</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Codigo_radicacion__c</fullName>
        <externalId>true</externalId>
        <label>Código radicación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comercial_Nombre_establecimiento__c</fullName>
        <label>Comercial – Nombre establecimiento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comercial_Nombre_establecimiento_cod1__c</fullName>
        <label>Comercial – Nombre establecimiento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comercial_Nombre_establecimiento_cod2__c</fullName>
        <label>Comercial – Nombre establecimiento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comercial_Nombre_establecimiento_cod3__c</fullName>
        <label>Comercial – Nombre establecimiento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concepto_de_analisis__c</fullName>
        <label>Concepto de análisis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Constructora__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Constructora</label>
        <referenceTo>Constructora__c</referenceTo>
        <relationshipLabel>Radicaciones de créditos</relationshipLabel>
        <relationshipName>Radicaciones_de_creditos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Constructora_r__c</fullName>
        <formula>Solicitud_de_credito__r.Constructora__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constructora</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cooperativas__c</fullName>
        <label>Cooperativas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cooperativas_codeudor1__c</fullName>
        <label>Cooperativas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cooperativas_codeudor2__c</fullName>
        <label>Cooperativas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cooperativas_codeudor3__c</fullName>
        <label>Cooperativas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credifamilia__c</fullName>
        <formula>IMAGE(
&quot;https://c.na17.content.force.com/servlet/servlet.FileDownload?file=015o0000001GWmO&quot;,&quot;&quot;,160,600)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credito_de_ong_s__c</fullName>
        <label>Crédito de ong’s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credito_de_ong_s_codeudor1__c</fullName>
        <label>Crédito de ong’s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credito_de_ong_s_codeudor2__c</fullName>
        <label>Crédito de ong’s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credito_de_ong_s_codeudor3__c</fullName>
        <label>Crédito de ong’s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credito_fondo_empleados__c</fullName>
        <label>Crédito fondo empleados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credito_solicitado__c</fullName>
        <label>Crédito solicitado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credito_solicitado_valor_a_financiar__c</fullName>
        <label>Crédito solicitado/valor a financiar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cual_Codeudor1__c</fullName>
        <label>Cual?</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_Codeudor2__c</fullName>
        <label>Cual?</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_Codeudor3__c</fullName>
        <label>Cual?</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_Deudor__c</fullName>
        <label>Cual?</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_Infoinmueble__c</fullName>
        <label>Cual?</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cual_es_su_principal_actividad_economica__c</fullName>
        <label>Cual es su principal actividad económica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuantas_personas_generan_ingresos__c</fullName>
        <label>Cuantas personas generan ingresos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Descripcion_otros_egresos__c</fullName>
        <label>Descripción otros egresos</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descripcion_otros_egresos_codeudor1__c</fullName>
        <label>Descripción otros egresos</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descripcion_otros_egresos_codeudor2__c</fullName>
        <label>Descripción otros egresos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descripcion_otros_egresos_codeudor3__c</fullName>
        <label>Descripción otros egresos</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descripcion_otros_ingresos__c</fullName>
        <label>Descripción otros ingresos</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descripcion_otros_ingresos_codeudor1__c</fullName>
        <label>Descripción otros ingresos</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descripcion_otros_ingresos_codeudor2__c</fullName>
        <label>Descripción otros ingresos</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descripcion_otros_ingresos_codeudor3__c</fullName>
        <label>Descripción otros ingresos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Destino_del_inmueble__c</fullName>
        <label>Destino del inmueble</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Uso propio</fullName>
                </value>
                <value>
                    <fullName>Renta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diferencia_Mejoramiento__c</fullName>
        <label>Diferencia Mejoramiento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direccion__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_activo2__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_activo__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_ciudad_otro__c</fullName>
        <label>Dirección / ciudad otro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_comercial__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_comercial_codeudor1__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_comercial_codeudor2__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_comercial_codeudor3__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_de_la_empresa_Deudor__c</fullName>
        <label>Dirección de la empresa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_envio_codeudor1__c</fullName>
        <label>Dirección envío de correspondencia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oficina</fullName>
                </value>
                <value>
                    <fullName>Residencia</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direccion_envio_codeudor2__c</fullName>
        <label>Dirección envío de correspondencia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oficina</fullName>
                </value>
                <value>
                    <fullName>Residencia</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direccion_envio_codeudor3__c</fullName>
        <label>Dirección envío de correspondencia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oficina</fullName>
                </value>
                <value>
                    <fullName>Residencia</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direccion_envio_de_correspondencia__c</fullName>
        <label>Dirección envío de correspondencia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oficina</fullName>
                </value>
                <value>
                    <fullName>Residencia</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direccion_familiar_codeudor1__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_familiar_codeudor2__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_oficina_codeudor1__c</fullName>
        <label>Dirección oficina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_oficina_codeudor2__c</fullName>
        <label>Dirección oficina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_oficina_codeudor3__c</fullName>
        <label>Dirección oficina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_oficina_deudor__c</fullName>
        <label>Dirección oficina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_parentesco_familiar__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_parentesco_personal__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_personal_codeudor1__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_personal_codeudor2__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_personal_codeudor3__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_residencia__c</fullName>
        <label>Dirección residencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPS__c</fullName>
        <label>EPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPS_codeudor1__c</fullName>
        <label>EPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPS_codeudor2__c</fullName>
        <label>EPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPS_codeudor3__c</fullName>
        <label>EPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Educacion__c</fullName>
        <label>Educación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Educacion_codeudor1__c</fullName>
        <label>Educación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Educacion_codeudor2__c</fullName>
        <label>Educación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Educacion_codeudor3__c</fullName>
        <label>Educación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ejerce_algun_grado_de_poder_publico__c</fullName>
        <label>Ejerce algún grado de poder público?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_codeudor1__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_codeudor2__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_codeudor3__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entidad_activo2__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_activo__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_codeudor1__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_codeudor2__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_codeudor3__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_transacciones__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_vehiculo2__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_vehiculo__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>